--- a/sindicato-app/app/views/associado/Edit.ejs
+++ b/sindicato-app/app/views/associado/Edit.ejs
@@ -101,7 +101,13 @@
 														<div class="col-sm-3">
 															Matrícula:
 															<input type="text" class="form-control" id="matricula"
-																name="matricula" value="<%= matricula %>"  required>
+																name="matricula" value="<%= matricula %>"  equired>
+														</div>
+
+														<div class="col-sm-3">
+															Status:
+															<input type="text" class="form-control" id="status"
+																name="status" value="<%= status %>" required>
 														</div>
 
 														<div class="col-sm-3">
@@ -387,9 +393,6 @@
 															class="d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm">Cancelar</a>
 													</div>
 												</div>
-
-
-
 											</form>
 										</div>
 									</div>
