--- a/sindicato-app/app/views/template/menu.ejs
+++ b/sindicato-app/app/views/template/menu.ejs
@@ -25,6 +25,14 @@
 		</a>
 	</li>
 
+	<li class="nav-item">
+		<a class="nav-link" href="/app/associado/pre-cadastro">
+			<i class="fas fa-user"></i>
+			<span>Pré-Cadastrados</span>
+		</a>
+	</li>
+
+
 	<!-- Nav Item - Tables -->
 	<!-- <li class="nav-item">
 			<a class="nav-link" href="/app/cursoinstituicao/list">
