Atualizado list e create de usuarios. Inserido a mascara para telefone no formulario de create usuario

--- a/app/views/usuario/List.ejs
+++ b/app/views/usuario/List.ejs
@@ -149,7 +149,7 @@
 										<% for (var i = 0; i < itens.length; i++) { %>
 											<tr>
 												<td><%= itens[i].nome %></td>
-												<td id="fone"><%= itens[i].contato1 %></td>
+												<td><%= itens[i].telefone %></td>
 												<td><%= itens[i].email %></td>											
 
 												<td><%= itens[i].ativo === true ? 'Sim' : 'Não' %></td>
