--- a/app/views/usuario/Perfil.ejs
+++ b/app/views/usuario/Perfil.ejs
@@ -88,18 +88,8 @@
 										<div class="input-group">
 											<div class="form-line">
 												Telefone
-										<input type="phone" class="form-control" id="contato1" name="contato1"
-											value="<%= contato1 %>">
-											</div>
-										</div>
-										
-									</div>
-									<div class="col-sm-4">
-										<div class="input-group">
-											<div class="form-line">
-												Celular
-										<input type="phone" class="form-control" id="contato2" name="contato2"
-											value="<%= contato2 %>">
+										<input type="phone" class="form-control" id="telefone" name="telefone"
+											value="<%= telefone %>">
 											</div>
 										</div>
 										
