--- a/app/views/usuario/Create.ejs
+++ b/app/views/usuario/Create.ejs
@@ -95,15 +95,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Telefone
-												<input type="phone" class="form-control" id="contato1" name="contato1">
-											</div>
-										</div>
-									</div>
-									<div class="col-sm-4">
-										<div class="input-group">
-											<div class="form-line">
-												Celular
-												<input type="phone" class="form-control" id="contato2" name="contato2">
+												<input type="phone" class="form-control" id="telefone" name="telefone">
 											</div>
 										</div>
 									</div>
@@ -115,9 +107,6 @@
 											</div>
 										</div>
 									</div>
-
-								</div>
-								<div class="row clearfix">
 									<div class="col-sm-3">
 										<div class="input-group">
 											Ativo
@@ -125,6 +114,19 @@
 												<option value="true">Sim</option>
 												<option value="false">Não</option>
 											</select>
+										</div>
+									</div>
+								</div>
+								<div class="row clearfix">									
+									<div class="col-sm-4">
+										<div class="input-group">
+											<div class="form-line">
+												Tipo de Usuário:
+												<select name="tpRedeEnsino" id="tpRedeEnsino" class="form-control">													
+													<option value="ADMIN">Administrador</option>
+													<option value="FILIAL">Filial</option>
+												</select>
+											</div>
 										</div>
 									</div>
 								</div>
