--- a/app/views/usuario/Create.ejs
+++ b/app/views/usuario/Create.ejs
@@ -122,7 +122,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Tipo de Usuário:
-												<select name="tpRedeEnsino" id="tpRedeEnsino" class="form-control">													
+												<select name="niveis" id="niveis" class="form-control">													
 													<option value="ADMIN">Administrador</option>
 													<option value="FILIAL">Filial</option>
 												</select>
