--- a/app/views/usuario/Edit.ejs
+++ b/app/views/usuario/Edit.ejs
@@ -97,7 +97,7 @@
 											<div class="form-line">
 												Nivel
 												<select class="form-control" id="niveis" name="niveis">
-													<option value="ADMIN" <%= niveis == 'ADMIN' ? 'selected' : '' %>>Admin
+													<option value="ADMIN" <%= niveis == 'ADMIN' ? 'selected' : '' %>>Administrador
 													</option>
 													<option value="FILIAL" <%= niveis == 'FILIAL' ? 'selected' : '' %>>Filial
 													</option>
