--- a/app/views/usuario/List.ejs
+++ b/app/views/usuario/List.ejs
@@ -131,7 +131,8 @@
 										<tr>
 											<th>Nome</th>
 											<th>Telefone</th>
-											<th>E-mail</th>											
+											<th>E-mail</th>
+											<th>Nível</th>	
 											<th>Ativo</th>
 											<th>Ação</th>
 										</tr>
@@ -140,7 +141,8 @@
 										<tr>
 											<th>Nome</th>
 											<th>Telefone</th>
-											<th>E-mail</th>											
+											<th>E-mail</th>	
+											<th>Nível</th>	
 											<th>Ativo</th>
 											<th>Ação</th>
 										</tr>
@@ -150,7 +152,8 @@
 											<tr>
 												<td><%= itens[i].nome %></td>
 												<td><%= itens[i].telefone %></td>
-												<td><%= itens[i].email %></td>											
+												<td><%= itens[i].email %></td>
+												<td><%= itens[i].niveis %></td>											
 
 												<td><%= itens[i].ativo === true ? 'Sim' : 'Não' %></td>
 
