Adicionado mascaras e capitaliza aos inputs.

--- a/app/views/associado/Create.ejs
+++ b/app/views/associado/Create.ejs
@@ -78,7 +78,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Nome Completo:
-												<input type="text" class="form-control" id="nome" name="nome" required>
+												<input type="text" class="form-control" id="nome" name="nome" required treatment="capitalize">
 											</div>
 										</div>
 									</div>
@@ -114,7 +114,7 @@
 											<div class="form-line">
 												Orgão Expeditor:
 												<input type="text" class="form-control" id="orgao_expedidor"
-													name="orgao_expedidor" required>
+													name="orgao_expedidor" required treatment="capitalize">
 											</div>
 										</div>
 									</div>
@@ -185,7 +185,7 @@
 											<div class="form-line">
 												Logradouro:
 												<input type="text" class="form-control" id="logradouro"
-													name="logradouro">
+													name="logradouro" treatment="capitalize">
 											</div>
 										</div>
 									</div>
@@ -214,7 +214,7 @@
 											<div class="form-line">
 												Bairro:
 												<input type="text" class="form-control" id="bairro" name="bairro"
-													maxlength="15">
+													maxlength="15" treatment="capitalize">
 											</div>
 										</div>
 									</div>
@@ -471,6 +471,8 @@
 
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+
+	
 
 </body>
 
