Adicionado style capitalize ao list de associado e pre-cadastrados.

--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -93,7 +93,7 @@
 										<tbody>
 											<% for (var i = 0; i < itensDois.length; i++) { %>
 											<tr>
-												<td><%= itensDois[i].nome %></td>
+												<td style="text-transform: capitalize"><%= itensDois[i].nome %></td>
 												<td><%= itensDois[i].cpf %></td>
 												<td>
 													<a href="/app/<%= page %>/edit/<%= itens[i].id %>" title="Editar">
