--- a/app/views/associado/List.ejs
+++ b/app/views/associado/List.ejs
@@ -96,7 +96,7 @@
 										<tbody>
 											<% for (var i = 0; i < itens.length; i++) { %>
 											<tr>
-												<td><%= itens[i].nome %></td>
+												<td style="text-transform: capitalize"><%= itens[i].nome %></td>
 												<td><%= itens[i].cpf %></td>
 												<td>
 													<a href="/app/<%= page %>/edit/<%= itens[i].id %>" title="Editar">
