Alterado menu do nivel Filial para vizualizar somente a rota pre-cadastrados.

--- a/app/views/template/menu-filial.ejs
+++ b/app/views/template/menu-filial.ejs
@@ -39,10 +39,18 @@
 		<div class="menu">
 			<ul class="list">
 				<li class="header">NAVEGAÇÃO</li>
+				<!--
 				<li>
 					<a href="/app/associado/list">
 						<i style="color:#4488bd" class="material-icons">person</i>
 						<span>Associados</span>
+					</a>
+				</li>
+				-->
+				<li>
+					<a href="/app/associado/pre-cadastro">
+						<i style="color: #4488bd" class="material-icons">person_outline</i>
+						<span>Pré-Cadastrados</span>
 					</a>
 				</li>						
 			   
