--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -66,9 +66,12 @@
 				<div class="row clearfix">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<div class="card">
-							<!-- Page Heading -->
+							<!-- Page Heading -->							
 							<div class="header">
-								<h2>Listagem de Pré-Cadastrados</h2>								
+								<h2>Listagem de Pré-Cadastrados</h2>
+								<a href="/app/<%= page %>/create" style="float: right; margin-top: -20px; margin-right: 10px;">
+									<i class="material-icons" style="color: #4488bd;">add_circle</i>
+								</a>
 							</div>
 
 							<div class="body">
@@ -94,12 +97,12 @@
 											<% for (var i = 0; i < itensDois.length; i++) { %>
 											<tr>
 												<td style="text-transform: capitalize"><%= itensDois[i].nome %></td>
-												<td><%= itensDois[i].cpf %></td>
+												<td id="cpf" class="cpf"><%= itensDois[i].cpf %></td>
 												<td>
-													<a href="/app/<%= page %>/edit/<%= itens[i].id %>" title="Editar">
+													<a href="/app/<%= page %>/edit/<%= itensDois[i].id %>" title="Editar">
 														<i class="material-icons" style="color: orange;">edit</i>
 													</a>
-													<a href="" data-toggle="modal" data-target="#logoutModal" onclick="setaDadosModal('<%= itens[i].id %>')" title="Excluir">
+													<a href="" data-toggle="modal" data-target="#logoutModal" onclick="setaDadosModal('<%= itensDois[i].id %>')" title="Excluir">
 														<i class="material-icons" style="color: red;">delete</i>
 													</a>
 												</td>
