Adicionado anexo a rota associado create e edit, criado campo de input para anexo em create e edit de associado. Alterado menu Filial. Removido coluna ação de associados para nivel user filial.

--- a/app/views/associado/Create.ejs
+++ b/app/views/associado/Create.ejs
@@ -175,6 +175,15 @@
 											</div>
 										</div>
 									</div>
+									<div class="col-sm-4">
+										<div class="input-group">
+											<div class="form-line">
+												Anexo de Documento:
+												<input type="file" class="form-control" id="anexo" name="anexo"
+												required>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="header" style="padding: 20px 20px 20px 0 !important; margin-bottom: 20px;">
 									<h2>Endereço</h2>
