--- a/app/views/associado/Edit.ejs
+++ b/app/views/associado/Edit.ejs
@@ -187,6 +187,15 @@
 															name="tel_cel" value="<%= endereco.tel_cel %>" maxlength="15">
 													</div>
 												</div>
+											</div>
+											<div class="col-sm-4">
+												<div class="input-group">
+													<div class="form-line">
+														Anexo de Documento:
+														<input type="file" class="form-control" id="anexo" name="anexo"
+														value="<%= anexo %>">
+													</div>
+												</div>
 											</div>											
 										</div>
 										<div class="header" style="padding: 20px 20px 20px 0 !important; margin-bottom: 20px;">
