--- a/app/views/associado/Edit-pre-cadastro.ejs
+++ b/app/views/associado/Edit-pre-cadastro.ejs
@@ -178,7 +178,7 @@
 													<div class="form-line">
 														Telefone Residencial: <% console.log(endereco) %>
 														<input type="text" class="form-control" id="tel_res"
-															name="tel_res" value="<%= endereco.tel_res %>" maxlength="15">
+															name="tel_res" value="<%= tel_res %>" maxlength="15">
 													</div>
 												</div>
 											</div>
@@ -438,6 +438,7 @@
 										</div>
 										<input type="hidden" name="id" id="id" value="<%= id %>">
 										<input type="hidden" id="status" name="status" value="<%= status %>">
+										<input type="hidden" name="cpf" id="cpf" value="<%= cpf %>">
 									</div>
 									<div class="footer-card">
 										<input type="submit" value="Salvar"
