--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -99,7 +99,7 @@
 												<td style="text-transform: capitalize"><%= itensDois[i].nome %></td>
 												<td id="cpf" class="cpf"><%= itensDois[i].cpf %></td>
 												<td>
-													<a href="/app/<%= page %>/edit-pre-cadastro/<%= itensDois[i].id %>" title="Editar">
+													<a href="/app/<%= page %>/edit/<%= itensDois[i].id %>" title="Editar">
 														<i class="material-icons" style="color: orange;">edit</i>
 													</a>
 													<a href="" data-toggle="modal" data-target="#logoutModal" onclick="setaDadosModal('<%= itensDois[i].id %>')" title="Excluir">
