--- a/app/views/associado/Create.ejs
+++ b/app/views/associado/Create.ejs
@@ -169,7 +169,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Telefone Celular:
-												<input type="text" class="form-control" id="tel_cel" name="tel_cel"
+												<input type="text" class="form-control" id="celular" name="celular"
 													maxlength="15">
 											</div>
 										</div>
