--- a/app/views/associado/Create.ejs
+++ b/app/views/associado/Create.ejs
@@ -43,7 +43,7 @@
 
 	<!-- Custom styles for this page -->
 	<link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 
 	<!-- Inclusão de Máscaras Js-->
 	<script src="/js/shopping-crianca-mask.js"></script>
@@ -168,9 +168,9 @@
 									<div class="col-sm-4">
 										<div class="input-group">
 											<div class="form-line">
-												Telefone Celular:
+												Telefone Celular: *
 												<input type="text" class="form-control" id="celular" name="celular"
-													maxlength="15">
+													maxlength="15" required>
 											</div>
 										</div>
 									</div>
@@ -178,8 +178,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Anexo de Documento:
-												<input type="file" class="form-control" id="anexo" name="anexo"
-												>
+												<input type="file" class="form-control" id="file" name="file">
 											</div>
 										</div>
 									</div>
