--- a/app/views/associado/Edit.ejs
+++ b/app/views/associado/Edit.ejs
@@ -43,7 +43,7 @@
 
 	<!-- Custom styles for this page -->
 	<link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 
 	<!-- Inclusão de Máscaras Js-->
 	<script src="/js/shopping-crianca-mask.js"></script>
@@ -72,7 +72,7 @@
 					<div class="block-header">
 						<h2>Editar Associado</h2>
 					</div>											
-					<form class="user" method="POST" action="/app/<%= page %>/edit/submit">
+					<form class="user" method="POST" action="/app/<%= page %>/edit/submit" enctype="multipart/form-data">
 						<div class="row clearfix">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<div class="card">
@@ -100,10 +100,10 @@
 												</div>
 											</div>
 											<%if(NivelUser == 'ADMIN') {%>																		
-												<div class="col-sm-4">
+												<div class="col-sm-4" style="margin-top: -19px;">
 													<div class="input-group">
 														<div class="form-line">
-															Status:
+															<h4>Status:</h4>
 															<select class="form-control show-tick" name="status"
 																id="status" required>
 																<option value="APROVAR" <%= status == 'APROVAR' ? 'selected' : '' %>>Aprovar</option>																		
@@ -188,7 +188,7 @@
 											<div class="col-sm-4">
 												<div class="input-group">
 													<div class="form-line">
-														Telefone Residencial: <% console.log(endereco) %>
+														Telefone Residencial: 
 														<input type="text" class="form-control" id="tel_res"
 															name="tel_res" value="<%= endereco.tel_res %>" maxlength="15">
 													</div>
@@ -197,9 +197,9 @@
 											<div class="col-sm-4">
 												<div class="input-group">
 													<div class="form-line">
-														Telefone Celular:
+														Telefone Celular: *
 														<input type="text" class="form-control" id="celular"
-															name="celular" value="<%= celular %>" maxlength="15">
+															name="celular" value="<%= celular %>" maxlength="15" required>
 													</div>
 												</div>
 											</div>
@@ -208,7 +208,7 @@
 												<div class="input-group">
 													<div class="form-line">
 														Anexo de Documento:
-														<input type="file" class="form-control" id="anexo" name="anexo"
+														<input type="file" class="form-control" id="file" name="file"
 														value="<%= anexo %>">
 													</div>
 												</div>
