--- a/app/views/associado/List.ejs
+++ b/app/views/associado/List.ejs
@@ -40,9 +40,13 @@
 
 	<!-- Custom styles for this page -->
 	<link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 
 	<script>
+		$(function () {
+			$('[data-toggle="tooltip"]').tooltip()
+		})
+
 		function setaDadosModal(valor) {
 			document.getElementById('campo').value = valor;
 		}
@@ -66,7 +70,6 @@
 		}
 	</script>
 
-
 </head>
 
 <body class="theme-teal">
@@ -85,61 +88,100 @@
 				<div class="row clearfix">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<div class="card">
-							<!-- Page Heading -->
+							<!-- Page Heading -->							
 							<div class="header">
 								<h2>Listagem de Associados</h2>								
 							</div>
 
 							<div class="body">
-								<div class="table-responsive">
-									<table class="table table-bordered table-striped table-hover js-basic-example dataTable" 
-									id="dataTable" width="100%" cellspacing="0">
-										<thead>
-											<tr>
-												<th>Nome</th>
-												<th>CPF</th>
-												<%if(NivelUser == 'ADMIN') {%>
-												<th>Ação</th>
-												<% } %>
-											</tr>
-										</thead>
-										<tfoot>
-											<tr>
-												<th>Nome</th>
-												<th>CPF</th>
-												<%if(NivelUser == 'ADMIN') {%>
-												<th>Ação</th>
-												<% } %>
-											</tr>
-										</tfoot>
-										<tbody>
-											<% for (var i = 0; i < itens.length; i++) { %>
-											<tr>
-												<td style="text-transform: capitalize"><%= itens[i].nome %></td>
-												<td id="cpf" class="cpf"><%= itens[i].cpf %></td>
-												
-												<td>
-													<a href="javascript:void(0)" onclick="getpdf('<%= itens[i].id %>')" data-toggle="modal" data-toggle-alt="tooltip" data-placement="bottom" title="" data-original-title="Baixar Documento">
-														<i class="material-icons" style="color: brown;">get_app</i>
-													</a>
-													<%if(NivelUser == 'ADMIN') {%>						
-													<a href="/app/<%= page %>/edit/<%= itens[i].id %>" title="Editar">
-														<i class="material-icons" style="color: orange;">edit</i>
-													</a>
-													<a href="" data-toggle="modal" data-target="#logoutModal" onclick="setaDadosModal('<%= itens[i].id %>')" title="Excluir">
-														<i class="material-icons" style="color: red;">delete</i>
-													</a>
-													<% } %>
-												</td>
-												
-											</tr>
-											<% } %>
-										</tbody>
+								<div class="row clearfix">
+									<div class="col-sm-3" style="height: 39px;">
+										<div class="input-group" style="align-items: center; display: flex;">
+											Visualizar 
+											<div class="form-line" style="width: 70px; margin: 0 4px;">
+												<select name="size" id="size" class="form-control" onchange="mudaSize()" style="padding-left: 12px;">
+													<option value="10">10</option>
+													<option value="25">25</option>
+													<option value="50">50</option>
+													<option value="100">100</option>
+												</select>
+											</div>
+											registros por página
+										</div>
+									</div>
+									<div class="col-sm-3 right" style="height: 39px;">
+										<div class="input-group" style="display: inline-flex; align-items: center;">
+											Pesquisar:
+											<div style="margin-left: 8px;" class="form-line">
+												<input type="text" class="form-control" id="busca" onchange="buscaCandidato(this.value);">
+											</div>
+										</div>
+									</div>
+								</div>	
+								<div class="table-responsive">									
+									<table class="table table-bordered table-striped table-hover js-basic-example dataTable"
+										id="dataTable" width="100%" cellspacing="0">
+                                        <thead>
+                                            <tr>
+                                                <th>Nome</th>
+                                                <th>CPF</th>
+                                                <%if(NivelUser == 'ADMIN') {%>
+                                                <th>Ação</th>
+                                                <% } %>
+                                            </tr>
+                                        </thead>
+                                        <tfoot>
+                                            <tr>
+                                                <th>Nome</th>
+                                                <th>CPF</th>
+                                                <%if(NivelUser == 'ADMIN') {%>
+                                                <th>Ação</th>
+                                                <% } %>
+                                            </tr>
+                                        </tfoot>
+                                        <tbody>
+                                            <% for (var i = 0; i < itens.length; i++) { %>
+                                            <tr>
+                                                <td style="text-transform: capitalize"><%= itens[i].nome %></td>
+                                                <td id="cpf" class="cpf"><%= itens[i].cpf %></td>
+                                                
+                                                <td>
+                                                    <a href="javascript:void(0)" onclick="getpdf('<%= itens[i].id %>')" data-toggle="modal" data-toggle-alt="tooltip" data-placement="bottom" title="" data-original-title="Baixar Documento">
+                                                        <i class="material-icons" style="color: brown;">get_app</i>
+                                                    </a>
+                                                    <%if(NivelUser == 'ADMIN') {%>                      
+                                                    <a href="/app/<%= page %>/edit/<%= itens[i].id %>" title="Editar">
+                                                        <i class="material-icons" style="color: orange;">edit</i>
+                                                    </a>
+                                                    <a href="" data-toggle="modal" data-target="#logoutModal" onclick="setaDadosModal('<%= itens[i].id %>')" title="Excluir">
+                                                        <i class="material-icons" style="color: red;">delete</i>
+                                                    </a>
+                                                    <% } %>
+                                                </td>
+                                                
+                                            </tr>
+                                            <% } %>
+                                        </tbody>
 									</table>
+									<div class="align-right">
+										<nav>
+											<ul class="pagination" style="display: inline-flex;">
+												<li id="page-anterior" data-page="0" class="page-item disabled">
+													<a class="disabled" id="page-link-anterior"
+														href="javascript:void(0);">Anterior</a>
+												</li>
+												<div id="page-number"
+													style="margin-left: 16px; margin-right: 16px; margin-top: 8px;">
+													<%= number+1 %> de <%= totalPages %></div>
+												<li id="page-posterior" data-page="1" class="page-item">
+													<a id="page-link-posterior"
+														href="javascript:void(0);">Próxima</a>
+												</li>
+											</ul>
+										</nav>
+									</div>										
 								</div>
 							</div>
-
-
 
 						</div>
 
