--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -40,11 +40,33 @@
 
 	<!-- Custom styles for this page -->
 	<link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 
 	<script>
+		$(function () {
+			$('[data-toggle="tooltip"]').tooltip()
+		})
+
 		function setaDadosModal(valor) {
 			document.getElementById('campo').value = valor;
+		}
+	</script>
+	<script>
+		function getpdf(id) {
+			$.ajax({
+				type: "GET",
+				url: "/app/associado/doc/" + id,
+				success: function (data) {
+					let pdfWindow = window.open("");
+					pdfWindow.document.write("<object width='100%' height='100%' type='application/pdf' data='data:application/pdf;base64, " + data.anexo_documento + "'></object>");
+					pdfWindow.document.title = "Documento";
+					
+				},
+				error: function (XMLHttpRequest, textStatus, errorThrown) {
+					alert('Error occurred while opening fax template'
+						+ getAjaxErrorString(textStatus, errorThrown));
+				}
+			});
 		}
 	</script>
 
@@ -76,8 +98,7 @@
 
 							<div class="body">
 								<div class="table-responsive">
-									<table
-										class="table table-bordered table-striped table-hover js-basic-example dataTable"
+									<table class="table table-bordered table-striped table-hover js-basic-example dataTable"
 										id="dataTable" width="100%" cellspacing="0">
 										<thead>
 											<tr>
@@ -99,6 +120,9 @@
 												<td style="text-transform: capitalize"><%= itensDois[i].nome %></td>
 												<td id="cpf" class="cpf"><%= itensDois[i].cpf %></td>
 												<td>
+													<a href="javascript:void(0)" onclick="getpdf('<%= itensDois[i].id %>')" data-toggle="modal" data-toggle-alt="tooltip" data-placement="bottom" title="" data-original-title="Baixar Documento">
+														<i class="material-icons" style="color: brown;">get_app</i>
+													</a>
 													<a href="/app/<%= page %>/edit/<%= itensDois[i].id %>" title="Editar">
 														<i class="material-icons" style="color: orange;">edit</i>
 													</a>
@@ -109,11 +133,9 @@
 											</tr>
 											<% } %>
 										</tbody>
-									</table>
+									</table>									
 								</div>
 							</div>
-
-
 
 						</div>
 
