--- a/app/views/associado/List.ejs
+++ b/app/views/associado/List.ejs
@@ -41,6 +41,7 @@
 	<!-- Custom styles for this page -->
 	<link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/js/postapi.js"></script>
 
 	<script>
 		$(function () {
@@ -69,6 +70,38 @@
 			});
 		}
 	</script>
+	<style>
+		.spinner-border {
+			position: absolute;
+			height: 100px;
+			width: 100px;
+			top: 50%;
+			left: 50%;
+			margin-left: -50px;
+			margin-top: -50px;
+		}
+
+		#overlay {
+			position: fixed;
+			/* Sit on top of the page content */
+			display: none;
+			/* Hidden by default */
+			width: 100%;
+			/* Full width (cover the whole page) */
+			height: 100%;
+			/* Full height (cover the whole page) */
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: rgba(0, 0, 0, 0.5);
+			/* Black background with opacity */
+			z-index: 2;
+			/* Specify a stack order in case you're using a different order for other elements */
+			cursor: pointer;
+			/* Add a pointer on hover */
+		}
+	</style>
 
 </head>
 
@@ -92,7 +125,6 @@
 							<div class="header">
 								<h2>Listagem de Associados</h2>								
 							</div>
-
 							<div class="body">
 								<div class="row clearfix">
 									<div class="col-sm-3" style="height: 39px;">
@@ -118,9 +150,9 @@
 										</div>
 									</div>
 								</div>	
-								<div class="table-responsive">									
-									<table class="table table-bordered table-striped table-hover js-basic-example dataTable"
-										id="dataTable" width="100%" cellspacing="0">
+								<div class="table-responsive">
+									<table id="dataTable"
+										class="table table-bordered table-striped table-hover js-basic-example dataTable">	
                                         <thead>
                                             <tr>
                                                 <th>Nome</th>
@@ -146,9 +178,11 @@
                                                 <td id="cpf" class="cpf"><%= itens[i].cpf %></td>
                                                 
                                                 <td>
+													<% if(itens[i].anexo) { %>
                                                     <a href="javascript:void(0)" onclick="getpdf('<%= itens[i].id %>')" data-toggle="modal" data-toggle-alt="tooltip" data-placement="bottom" title="" data-original-title="Baixar Documento">
                                                         <i class="material-icons" style="color: brown;">get_app</i>
-                                                    </a>
+													</a>
+													<% } %>
                                                     <%if(NivelUser == 'ADMIN') {%>                      
                                                     <a href="/app/<%= page %>/edit/<%= itens[i].id %>" title="Editar">
                                                         <i class="material-icons" style="color: orange;">edit</i>
@@ -231,9 +265,7 @@
 		</div>
 	</div>
 
-
-
-
+	
 	<!-- Jquery Core Js -->
 	<script src="/js/plugins/jquery/jquery.min.js"></script>
 
@@ -261,8 +293,45 @@
 	<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
 	<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-	<!-- Page level custom scripts -->
-	<script src="/js/demo/datatables-demo.js"></script>
+	<!-- Page level custom scripts 
+	<script src="/js/demo/datatables-demo.js"></script> -->
+	<script>
+		$('#page-posterior').click(function () {
+			document.getElementById("overlay").style.display = "block";
+			var page = $(this).attr('data-page');
+			var pageAnterior = $("#page-anterior").attr('data-page');
+			var busca = $("#busca").val();
+			var size = $("#size").val();
+			var data;
+			if (busca != null) {
+				data = { page: page, busca: busca, size: size };
+			} else {
+				data = { page: page, size: size };
+			}
+
+			postApiPosterior(data, page, pageAnterior);
+
+		});
+
+		$('#page-anterior').click(function () {
+			document.getElementById("overlay").style.display = "block";
+			var pagePosterior = $('#page-posterior').attr('data-page');
+			var pageAnterior = $("#page-anterior").attr('data-page');
+			var busca = $("#busca").val();
+			var size = $("#size").val();
+			var data;
+			if (busca != null) {
+				data = { page: pageAnterior - 1, busca: busca, size: size };
+			} else {
+				data = { page: pageAnterior - 1, size: size };
+			}
+
+			if (pageAnterior > 0) {
+				postApiAnterior(data, pageAnterior, pagePosterior);
+			}
+		});
+
+	</script>
 
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
