--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -41,6 +41,7 @@
 	<!-- Custom styles for this page -->
 	<link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/js/postapi.js"></script>
 
 	<script>
 		$(function () {
@@ -69,6 +70,38 @@
 			});
 		}
 	</script>
+	<style>
+		.spinner-border {
+			position: absolute;
+			height: 100px;
+			width: 100px;
+			top: 50%;
+			left: 50%;
+			margin-left: -50px;
+			margin-top: -50px;
+		}
+
+		#overlay {
+			position: fixed;
+			/* Sit on top of the page content */
+			display: none;
+			/* Hidden by default */
+			width: 100%;
+			/* Full width (cover the whole page) */
+			height: 100%;
+			/* Full height (cover the whole page) */
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: rgba(0, 0, 0, 0.5);
+			/* Black background with opacity */
+			z-index: 2;
+			/* Specify a stack order in case you're using a different order for other elements */
+			cursor: pointer;
+			/* Add a pointer on hover */
+		}
+	</style>
 
 </head>
 
@@ -97,9 +130,33 @@
 							</div>
 
 							<div class="body">
+								<div class="row clearfix">
+									<div class="col-sm-3" style="height: 39px;">
+										<div class="input-group" style="align-items: center; display: flex;">
+											Visualizar 
+											<div class="form-line" style="width: 70px; margin: 0 4px;">
+												<select name="size" id="size" class="form-control" onchange="mudaSize()" style="padding-left: 12px;">
+													<option value="10">10</option>
+													<option value="25">25</option>
+													<option value="50">50</option>
+													<option value="100">100</option>
+												</select>
+											</div>
+											registros por página
+										</div>
+									</div>
+									<div class="col-sm-3 right" style="height: 39px;">
+										<div class="input-group" style="display: inline-flex; align-items: center;">
+											Pesquisar:
+											<div style="margin-left: 8px;" class="form-line">
+												<input type="text" class="form-control" id="busca" onchange="buscaCandidato(this.value);">
+											</div>
+										</div>
+									</div>
+								</div>
 								<div class="table-responsive">
-									<table class="table table-bordered table-striped table-hover js-basic-example dataTable"
-										id="dataTable" width="100%" cellspacing="0">
+									<table id="dataTable"
+										class="table table-bordered table-striped table-hover js-basic-example dataTable">
 										<thead>
 											<tr>
 												<th>Nome</th>
@@ -120,9 +177,11 @@
 												<td style="text-transform: capitalize"><%= itensDois[i].nome %></td>
 												<td id="cpf" class="cpf"><%= itensDois[i].cpf %></td>
 												<td>
+													<% if(itensDois[i].anexo) { %>
 													<a href="javascript:void(0)" onclick="getpdf('<%= itensDois[i].id %>')" data-toggle="modal" data-toggle-alt="tooltip" data-placement="bottom" title="" data-original-title="Baixar Documento">
 														<i class="material-icons" style="color: brown;">get_app</i>
 													</a>
+													<% } %>
 													<a href="/app/<%= page %>/edit/<%= itensDois[i].id %>" title="Editar">
 														<i class="material-icons" style="color: orange;">edit</i>
 													</a>
@@ -133,7 +192,24 @@
 											</tr>
 											<% } %>
 										</tbody>
-									</table>									
+									</table>
+									<div class="align-right">
+										<nav>
+											<ul class="pagination" style="display: inline-flex;">
+												<li id="page-anterior" data-page="0" class="page-item disabled">
+													<a class="disabled" id="page-link-anterior"
+														href="javascript:void(0);">Anterior</a>
+												</li>
+												<div id="page-number"
+													style="margin-left: 16px; margin-right: 16px; margin-top: 8px;">
+													<%= number+1 %> de <%= totalPages %></div>
+												<li id="page-posterior" data-page="1" class="page-item">
+													<a id="page-link-posterior"
+														href="javascript:void(0);">Próxima</a>
+												</li>
+											</ul>
+										</nav>
+									</div>									
 								</div>
 							</div>
 
@@ -185,7 +261,7 @@
 		</div>
 	</div>
 
-
+	
 
 
 	<!-- Jquery Core Js -->
@@ -215,8 +291,45 @@
 	<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
 	<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-	<!-- Page level custom scripts -->
-	<script src="/js/demo/datatables-demo.js"></script>
+	<!-- Page level custom scripts 
+	<script src="/js/demo/datatables-demo.js"></script> -->
+	<script>
+		$('#page-posterior').click(function () {
+			document.getElementById("overlay").style.display = "block";
+			var page = $(this).attr('data-page');
+			var pageAnterior = $("#page-anterior").attr('data-page');
+			var busca = $("#busca").val();
+			var size = $("#size").val();
+			var data;
+			if (busca != null) {
+				data = { page: page, busca: busca, size: size };
+			} else {
+				data = { page: page, size: size };
+			}
+
+			postApiPosterior(data, page, pageAnterior);
+
+		});
+
+		$('#page-anterior').click(function () {
+			document.getElementById("overlay").style.display = "block";
+			var pagePosterior = $('#page-posterior').attr('data-page');
+			var pageAnterior = $("#page-anterior").attr('data-page');
+			var busca = $("#busca").val();
+			var size = $("#size").val();
+			var data;
+			if (busca != null) {
+				data = { page: pageAnterior - 1, busca: busca, size: size };
+			} else {
+				data = { page: pageAnterior - 1, size: size };
+			}
+
+			if (pageAnterior > 0) {
+				postApiAnterior(data, pageAnterior, pagePosterior);
+			}
+		});
+
+	</script>
 
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
